+page materiaisEducativos being done +start of programming the vertical bar for timeline

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -39,7 +39,13 @@
 
     <!-- TIME LINE -->
     <div id="timelineContent" class="dflex fdc aic"> <!-- je = Jogos Educativos -->
-        <p class="m0 jersey beige fontSubitleSize">LINHA DO TEMPO</p>
+        <!-- INFO BUTTON -->
+        <div class="dflex fdr">
+            <p class="m0 p0 jersey beige fontSubitleSize">LINHA DO TEMPO</p>
+            <span class="infoBtn dflex jcc aic">
+                <p class="m0 p0 IBM beige">?</p>
+            </span>
+        </div>
 
         <div class="w80">
             <div id="timelineBar" class="bgBeige">
