--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     
             <div id="links" class="dflex fdr jcsb w50">
                 <a href="html/JogosEducativos.html" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline">Jogos Educativos</p>
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Jogos Educativos</p>
+                </a>
+                <a href="html/MateriaisEducativos.html" class="btnNavbar">
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
                 </a>
                 <a href="#" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline">Materiais Educativos</p>
-                </a>
-                <a href="#" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline">Sobre o Projeto</p>
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
             </div>
         </div>
@@ -55,7 +55,7 @@
 
 
     <!-- SECTION TIMER // DIVING PART // counting since April 25, 1974 -->
-    <div id="sectionTimer" class="dflex jcc bgGrey">
+    <div id="sectionTimer" class="dflex jcc bgGrey m0 p0">
         <div id="boxTimer" class="dflex fdc jcc aic bgGrey">
             <p class="m0 IBM beige fontNormalSize">Estamos livres há:</p>
 
