+purely visual of "materiais educativos" page complete. +few tweaks on font sizes

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -41,7 +41,7 @@
     <div id="timelineContent" class="dflex fdc aic"> <!-- je = Jogos Educativos -->
         <!-- INFO BUTTON -->
         <div class="dflex fdr">
-            <p class="m0 p0 jersey beige fontSubitleSize">LINHA DO TEMPO</p>
+            <p class="m0 p0 jersey beige fontSubtitleSize">LINHA DO TEMPO</p>
             <span class="infoBtn dflex jcc aic">
                 <p class="m0 p0 IBM beige">?</p>
             </span>
@@ -70,7 +70,7 @@
                 <!-- <hr> -->
             </div>
 
-            <p class="m0 jersey red fontSubitleSize">1928</p>
+            <p class="m0 jersey red fontSubtitleSize">1928</p>
 
             <div class="yearGameTitle2">
                 <!-- <hr> -->
