--- a/index.html
+++ b/index.html
@@ -144,33 +144,33 @@
                 <div id="footerImg" class="bgBeige">
 
                 </div><br>
-                <p class="m0 jersey beige fontFooterTitleSize">Liberty <br> Breakout</p>
+                <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
             </div>
 
             <div id="footerMiddleRight">
-                <p class="m0 IBM beige fontFooterSize">
+                <p class="m0 IBM beige fontNormalSize2">
                     Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
                 </p>
             </div>
 
             <div id="footerRight" class="dflex fdc jcc aic">
                 <div>
-                    <p id="footerLinkTitle" class="m0 jersey beige fontFooterTitleSize">
+                    <p id="footerLinkTitle" class="m0 jersey beige fontSubtitleSize2">
                         Páginas:
                     </p>
                     
                     <div>
                         <!-- Jogos Educativos -->
                         <a href="#">
-                            <p class="m0 IBM beige fontFooterSize">> Jogos Educativos</p>
+                            <p class="m0 IBM beige fontNormalSize2">> Jogos Educativos</p>
                         </a>
                         <!-- Materiais Educativos -->
                         <a href="#">
-                            <p id="footerLink" class="m0 IBM beige fontFooterSize">> Materiais Educativos</p>
+                            <p id="footerLink" class="m0 IBM beige fontNormalSize2">> Materiais Educativos</p>
                         </a>
                         <!-- Sobre o Projeto -->
                         <a href="#">
-                            <p class="m0 IBM beige fontFooterSize">> Sobre o Projeto</p>
+                            <p class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
                         </a>
                     </div>
                 </div>
