+positioning of visuals complete

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -30,7 +30,7 @@
                 <a href="MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkActive">Materiais Educativos</p>
                 </a>
-                <a href="#" class="btnNavbar">
+                <a href="SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
             </div>
