--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="html/MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
                 </a>
-                <a href="#" class="btnNavbar">
+                <a href="html/SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
             </div>
