--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -19,11 +19,12 @@
 <body class="bgGrey">
     <!-- NAVBAR -->
     <nav id="navbar" class="pa00 w100 dflex jcc">
-        <div id="navbarContent" class="dflex">
-            <div id="logo" class="w50">
-            </div>
+        <div id="navbarContent" class="dflex jcsb aic">
+            <a id="logo" href="../index.html">
+                <img src="../images/cravo_logo.png" height="100%">
+            </a>
     
-            <div id="links" class="dflex fdr jcsb w50">
+            <div id="links" class="dflex fdr jcsb">
                 <a href="JogosEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Jogos Educativos</p>
                 </a>
