changed to manually blurred mainpage image instead of blurred by code. Changed code in how to present mainpage image (visually it's the same)

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 
     
     <!-- SECTION 1 // main div -->
-    <div id="section1">
-        <img class="imgBlur" src="images/pgPrincipal1.jpg" width="100%">
-
+    <div id="section1" class="dflex fdc jcc">
         <div id="section1Content">
             <p id="mainTitle" class="m0 jersey beige fontOutlineBig">LIBERTY <br> BREAKOUT</p>
 
