added logo to footer and the respective href of each link

--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -76,9 +76,9 @@
     <footer class="dflex jcc bgRed">
         <div id="footer">
             <div id="footerLeft">
-                <div id="footerImg" class="bgBeige">
-
-                </div><br>
+                <a href="../index.html" id="footerImg" class="bgBeige dflex jcc aie">
+                    <img src="../images/cravo_cropped.png" height="90%" alt="">
+                </a><br>
                 <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
             </div>
 
@@ -96,15 +96,15 @@
                     
                     <div>
                         <!-- Jogos Educativos -->
-                        <a href="#">
+                        <a href="JogosEducativos.html">
                             <p class="m0 IBM beige fontNormalSize2">> Jogos Educativos</p>
                         </a>
                         <!-- Materiais Educativos -->
-                        <a href="#">
+                        <a href="MateriaisEducativos.html">
                             <p id="footerLink" class="m0 IBM beige fontNormalSize2">> Materiais Educativos</p>
                         </a>
                         <!-- Sobre o Projeto -->
-                        <a href="#">
+                        <a href="SobreProjeto.html">
                             <p class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
                         </a>
                     </div>
