--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -90,5 +90,46 @@
             </div>
         </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer class="dflex jcc bgRed">
+        <div id="footer">
+            <div id="footerLeft">
+                <a href="../index.html" id="footerImg" class="bgBeige dflex jcc aie">
+                    <img src="../images/cravo_cropped.png" height="90%" alt="">
+                </a><br>
+                <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
+            </div>
+
+            <div id="footerMiddleRight">
+                <p class="m0 IBM beige fontNormalSize2">
+                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
+                </p>
+            </div>
+
+            <div id="footerRight" class="dflex fdc jcc aic">
+                <div>
+                    <p id="footerLinkTitle" class="m0 jersey beige fontSubtitleSize2">
+                        Páginas:
+                    </p>
+                    
+                    <div>
+                        <!-- Jogos Educativos -->
+                        <a href="JogosEducativos.html">
+                            <p class="m0 IBM beige fontNormalSize2">> Jogos Educativos</p>
+                        </a>
+                        <!-- Materiais Educativos -->
+                        <a href="MateriaisEducativos.html">
+                            <p id="footerLink" class="m0 IBM beige fontNormalSize2">> Materiais Educativos</p>
+                        </a>
+                        <!-- Sobre o Projeto -->
+                        <a href="SobreProjeto.html">
+                            <p class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
