added flower(cravo) to every main button in mainpage and an animation to it when mouse hover

--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
 
             <p class="m0 IBM beige fontNormalSize fontOutline">leirum osdifmow iermw ioriw.</p>
 
-            <a href="#" class="btnStart bgBeige dif">
-                <p class="m0 jersey red">COMEÇAR</p>
+            <a href="#" class="btnStart bgBeige dif jcsa">
+                <div id="btnStartImg" class="dif">
+                    <img src="images/cravo_cropped.png" width="100%">
+                </div>
+                <div class="dflex aic">
+                    <p class="m0 jersey red">COMEÇAR</p>
+                </div>
             </a>
         </div>
     </div>
@@ -96,9 +101,15 @@
                     </p>
                 </div>
 
+                <!-- BUTTON PLAY / "JOGAR" -->
                 <div>
-                    <a href="#" class="btnStart bgGrey dif">
-                        <p class="m0 jersey red">COMEÇAR</p>
+                    <a href="#" class="btnStart bgGrey dif jcsa">
+                        <div id="btnStartImg" class="dif">
+                            <img src="images/cravo_cropped.png" width="100%">
+                        </div>
+                        <div class="dflex aic">
+                            <p class="m0 jersey red">JOGAR</p>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -127,9 +138,15 @@
                 <div id="section3Img3"></div>
             </div>
 
+            <!-- BUTTON "SABER MAIS" -->
             <div>
-                <a href="#" class="btnStart bgBeige dif">
-                    <p class="m0 jersey red">Saber mais</p>
+                <a href="#" class="btnStart bgBeige dif jcsa">
+                    <div id="btnStartImg" class="dif">
+                        <img src="images/cravo_cropped.png" width="100%">
+                    </div>
+                    <div class="dflex aic">
+                        <p class="m0 jersey red">SABER MAIS</p>
+                    </div>
                 </a>
             </div>
         </div>
