darkened mainpage image background. Added Actual sentences/texts to the pages (no actual information on the subject yet to the interactive texts)

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -103,7 +103,7 @@
 
             <div id="footerMiddleRight">
                 <p class="m0 IBM beige fontNormalSize2">
-                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
+                    Preserva a memória, molda o presente e guia-nos para um futuro próspero.
                 </p>
             </div>
 
