--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -50,9 +50,9 @@
             </div>
 
             <p id="figuresTxt" class="m0 IBM beige fontNormalSize">
-                Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
+                Descobre as personalidades e os grupos que mais impactaram o período de ditadura que antecedeu a Liberdade dos Cravos e os que levaram ao desenrolar da mesma. Cada perfil revela histórias associadas ao período de opressão que Portugal sofreu no século passado.
                 <br><br>
-                Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
+                Clica num personagem/grupo e aprende mais sobre as suas funcionalidades e relevâncias neste período de tempo.
             </p>
 
             <div id="figuresImgDiv" class="w100 dflex fdr">
@@ -78,9 +78,9 @@
             </div>
 
             <p id="timelineIntro" class="m0 IBM beige fontNormalSize">
-                Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
+                Viaja pela nossa linha do tempo interativa e explora os acontecimentos mais relevantes de cada ano. Esta ferramenta permite-te ver de forma clara e cronológica como a trajetória da revolução se desenrolou, ajudando-te a entender a evolução que conduziu à democracia que hoje conhecemos.
                 <br><br>
-                Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
+                Clica num ano para ver como os eventos se desenrolaram e como ajudaram a moldar o caminho para a liberdade em Portugal.
             </p>
 
             <!-- TIMELINE -->
@@ -206,7 +206,7 @@
 
             <div id="footerMiddleRight">
                 <p class="m0 IBM beige fontNormalSize2">
-                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
+                    Preserva a memória, molda o presente e guia-nos para um futuro próspero.
                 </p>
             </div>
 
