--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -40,7 +40,7 @@
 
     <!-- first section -->
     <div class="dflex jcc aic sectionsHeight">
-        <p class="m0 jersey fontSubtitleSize2 beige">"Vivamus sit amet ex eu ex placerat varius."</p>
+        <p class="m0 jersey fontSubtitleSize2 beige">"Vivemos num presente cuja liberdade foi cravada pelo passado."</p>
     </div>
 
     <!-- second section -->
@@ -53,11 +53,13 @@
                     <p class="m0 jersey fontSubtitleSize red">Liberdade Cravada</p>
                     <img src="" alt="">
                 </span>
-                <p class="m0 jersey fontSubtitleSize2">Suspendisse non accumsan libero</p>
+                <p class="m0 jersey fontSubtitleSize2">Passar adiante a palavra da história.</p>
                 <p class="m0 IBM fontNormalSize">
-                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
-                    <br><br>
-                    Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
+                    Este recurso foi concebido para reconstruir a sequência dos acontecimentos que antecederam a
+                    Revolução dos Cravos e para demonstrar como o 25 de Abril transformou o panorama social e
+                    político de Portugal. A iniciativa destina-se a preservar a memória coletiva, estimular a
+                    reflexão e promover a compreensão dos valores democráticos que moldaram a história do país,
+                    visto que as gerações mais jovens são as que escolhem e constroem o futuro de Portugal.
                 </p>
             </div>
         </div>
@@ -84,7 +86,7 @@
 
             <div id="footerMiddleRight">
                 <p class="m0 IBM beige fontNormalSize2">
-                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
+                    Preserva a memória, molda o presente e guia-nos para um futuro próspero.
                 </p>
             </div>
 
