--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div id="section1Content">
             <p id="mainTitle" class="m0 jersey beige fontOutlineBig">LIBERTY <br> BREAKOUT</p>
 
-            <p class="m0 IBM beige fontNormalSize fontOutline">leirum osdifmow iermw ioriw.</p>
+            <p class="m0 IBM beige fontNormalSize fontOutlineSmall">Explora "Liberdade Cravada" e revê a jornada histórica que moldou Portugal.</p>
+            <br>
 
             <a href="#" class="btnStart bgBeige dif jcsa">
                 <div id="btnStartImg" class="dif">
@@ -89,15 +90,15 @@
 
     <!-- SECTION 2 // about liberty breakout -->
     <div id="section2" class="dflex fdc jcc aic bgBeige">
-        <p class="m0 jersey red fontTitleSize">Liberty Breakout</p>
+        <p class="m0 jersey red fontTitleSize">Jogos Educativos</p>
 
         <div id="section2Content" class="dflex fdr jcc">
             <div id="section2Txt" class="dflex fdc jcsb">
                 <div>
                     <p class="m0 IBM fontNormalSize">
-                        Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
+                        Embarca numa viagem interativa que te transporta para os momentos que antecederam e impulsionaram a Revolução dos Cravos. Desde o dia a dia de cada posição social, à intensificação da opressão e, finalmente, ao dia da liberdade.
                         <br><br>
-                        Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
+                        Os nossos minijogos educativos convidam-te a experimentar, de forma lúdica e envolvente, cada etapa desta transformação histórica.
                     </p>
                 </div>
 
@@ -129,7 +130,7 @@
 
         <div id="section3Content" class="dflex fdc jcc aic">
             <p class="m0 IBM fontNormalSize beige">
-                Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci. Aliquam gravida semper erat vel ullamcorper. Integer at quam arcu.
+                Na página de Materiais Educativo, terás acesso a fichas e informações relevantes que te ajudarão a compreender melhor a importância do 25 de Abril e a conquista dos direitos que moldaram a democracia em Portugal.
             </p>
 
             <div id="section3Images" class="dflex fdr jcsb">
@@ -165,7 +166,7 @@
 
             <div id="footerMiddleRight">
                 <p class="m0 IBM beige fontNormalSize2">
-                    Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi.
+                    Preserva a memória, molda o presente e guia-nos para um futuro próspero.
                 </p>
             </div>
 
