counts time passed since date 25/04/1974

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
             <div id="timer" class="w100 dflex fdr jcsa">
                 <!-- years -->
                 <div id="years" class="dflex fdc jcc aic">
-                    <p class="m0 jersey red fontTitleSize">50</p>
+                    <p id="yearsNbr" class="m0 jersey red fontTitleSize">50</p>
                     <p class="m0 IBM beige fontNormalSize">Anos</p>
                 </div>
 
                 <!-- months -->
                 <div id="months" class="dflex fdc jcc aic">
-                    <p class="m0 jersey red fontTitleSize">8</p>
+                    <p id="monthsNbr" class="m0 jersey red fontTitleSize">8</p>
                     <p class="m0 IBM beige fontNormalSize">Meses</p>
                 </div>
 
                 <!-- days -->
                 <div id="days" class="dflex fdc jcc aic">
-                    <p class="m0 jersey red fontTitleSize">30</p>
+                    <p id="daysNbr" class="m0 jersey red fontTitleSize">30</p>
                     <p class="m0 IBM beige fontNormalSize">Dias</p>
                 </div>
             </div>
@@ -194,5 +194,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="javascript/mainpage.js"></script>
 </body>
 </html>
