media queries updated to now support bigger desktop screens (original media query that was made), and smaller desktop screens

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -81,11 +81,22 @@
 
     <!-- 1928 SECTION GAME LIST -->
     <div id="gameSection" class="dflex fdc aic">
-        <div id="gameList" class="w80">
+        <div id="gameList">
             <!-- each game panel -->
-            <div>
-                <p class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
-                <br>
+            <div id="divGame">
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <div id="divGameImg" class="bgBeige"></div>
+            </div>
+            <div id="divGame">
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <div id="divGameImg" class="bgBeige"></div>
+            </div>
+            <div id="divGame">
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <div id="divGameImg" class="bgBeige"></div>
+            </div>
+            <div id="divGame">
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
         </div>
