--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -84,7 +84,7 @@
             </p>
 
             <!-- TIMELINE -->
-            <div class="dflex fdr aic">
+            <div id="timelineDiv" class="dflex fdr aic">
                 <!-- years + vertical line -->
                 <div id="yearsBarContent" class="dflex fdr">
                     
