started adding media queries corresponding tablets

--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -44,14 +44,13 @@
     </div>
 
     <!-- second section -->
-    <div class="dflex jcc aic bgBeige sectionsHeight">
-        <div class="dflex fdr jcsb aic mainWidth">
-            <img src="../images/AI OG pgPrincipal1.webp" width="40%">
+    <div id="secondSection" class="dflex jcc aic bgBeige">
+        <div id="secondContent" class="mainWidth">
+            <img src="../images/AI OG pgPrincipal1.webp">
 
             <div id="secondSectionTxt" class="dflex fdc">
                 <span class="dflex fdr">
                     <p class="m0 jersey fontSubtitleSize red">Liberdade Cravada</p>
-                    <img src="" alt="">
                 </span>
                 <p class="m0 jersey fontSubtitleSize2">Passar adiante a palavra da história.</p>
                 <p class="m0 IBM fontNormalSize">
