--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     <div id="section1" class="dflex fdc jcc">
         <div id="section1Content">
             <p id="mainTitle" class="m0 jersey beige fontOutlineBig">LIBERTY <br> BREAKOUT</p>
+            <p id="mainTitleVertical" class="m0 jersey beige fontOutlineBig">LIBERTY BREAKOUT</p>
 
-            <p class="m0 IBM beige fontNormalSize fontOutlineSmall">Explora "Liberdade Cravada" e revê a jornada histórica que moldou Portugal.</p>
+            <p id="mainTxt" class="m0 IBM beige fontNormalSize fontOutlineSmall">Explora "Liberdade Cravada" e revê a jornada histórica que moldou Portugal.</p>
             <br>
 
             <a href="#" class="btnStart bgBeige dif jcsa">
@@ -92,7 +93,7 @@
     <div id="section2" class="dflex fdc jcc aic bgBeige">
         <p class="m0 jersey red fontTitleSize">Jogos Educativos</p>
 
-        <div id="section2Content" class="dflex fdr jcc">
+        <div id="section2Content">
             <div id="section2Txt" class="dflex fdc jcsb">
                 <div>
                     <p class="m0 IBM fontNormalSize">
@@ -119,7 +120,7 @@
             <!-- arranjar forma de fazer esta imagem começar só a partir do
             meio vertical da página mas ocupar a altura a 100% do div
             onde esta está inclusa-->
-            <img id="section2Img" src="images/pgPrincipal2.png" height="100%">
+            <img id="section2Img" src="images/pgPrincipal2.png">
         </div>
     </div>
 
