if it's the day 25 of a month (which means, if it is X years and X month anniversary and 0 days of the festive date), show number of hours of today's and "hours" as text instead of "0 days"

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <!-- days -->
                 <div id="days" class="dflex fdc jcc aic">
                     <p id="daysNbr" class="m0 jersey red fontTitleSize">30</p>
-                    <p class="m0 IBM beige fontNormalSize">Dias</p>
+                    <p id="daysWord" class="m0 IBM beige fontNormalSize">Dias</p>
                 </div>
             </div>
         </div>
