added hamburger menu to replace default navbar on smaller devices

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -35,7 +35,40 @@
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
             </div>
+
+            <!-- menu hamburger -->
+            <div id="iconHamburger">
+                <img src="../images/iconography/hamburger_menu.png" height="100%">
+            </div>
         </div>
+    </nav>
+
+    <!-- HAMBURGER MENU -->
+    <div id="menuHamburgerBg"></div>
+    <nav aria-label="secundary" id="menuHamburger" class="bgBeige">
+        <div class="dflex fdrr">
+            <button id="btnCloseHamburger">
+                <img src="../images/iconography/close.png" height="30vh" alt="button that closes side hamburger bar">
+            </button>
+        </div>
+
+        <ul class="hamburger-sidebar-navigation">
+            <li>
+                <a role="menuitem" href="JogosEducativos.html">
+                    <p class="m0 jersey red navlinkActive">Jogos Educativos</p>
+                </a>
+            </li>
+            <li>
+                <a role="menuitem" href="MateriaisEducativos.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Materiais Educativos</p>
+                </a>
+            </li>
+            <li>
+                <a role="menuitem" href="SobreProjeto.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Sobre o Projeto</p>
+                </a>
+            </li>
+        </ul>
     </nav>
 
     <!-- TIME LINE -->
@@ -142,5 +175,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="../javascript/everyPage.js"></script>
 </body>
 </html>
