added media queries for mobile devices (page "Materiais Educativos" is yet to be changed on a specific section)

--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- first section -->
-    <div class="dflex jcc aic sectionsHeight">
+    <div id="firstSection" class="dflex jcc aic sectionsHeight">
         <p class="m0 jersey fontSubtitleSize2 beige">"Vivemos num presente cuja liberdade foi cravada pelo passado."</p>
     </div>
 
