--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <nav aria-label="secundary" id="menuHamburger" class="bgBeige">
         <div class="dflex fdrr">
             <button id="btnCloseHamburger">
-                <img src="images/iconography/close.png" height="30vh" alt="button that closes side hamburger bar">
+                <img src="images/iconography/close.png" alt="button that closes side hamburger bar">
             </button>
         </div>
 
