added different variation of timeline with educational info for mobile

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <!-- LINHA DO TEMPO -->
+    <!-- LINHA DO TEMPO PC -->
     <div id="timelineContent" class="dflex fdc aic">
         <div class="w80">
             <!-- INFO BUTTON -->
@@ -222,6 +222,58 @@
                             <p id="pagesRight" class="m0 p0 IBM fontNormalSize2 beige">></p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- LINHA DO TEMPO MOBILE -->
+    <div id="timelineContentM" class="dflex fdc aic">
+        <div id="timelineBarM" class="w80 bgBeige dflex fdr">
+            <div id="alwaysFilled" class="timelineSectionBar bgRed dflex fdrr">
+                <button id="ball1928" class="timelineBall activeBall"></button>
+            </div>
+            <div id="year1933" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1933" class="timelineBall inactiveBall"></button>
+            </div>
+            <div id="year1945" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1945" class="timelineBall inactiveBall"></button>
+            </div>
+            <div id="year1958" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1958" class="timelineBall inactiveBall"></button>
+            </div>
+            <div id="year1961" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1961" class="timelineBall inactiveBall"></button>
+            </div>
+            <div id="year1968" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1968" class="timelineBall inactiveBall"></button>
+            </div>
+            <div id="year1974" class="timelineSectionBar bgBeige dflex fdrr">
+                <button id="ball1974" class="timelineBall inactiveBall"></button>
+            </div>
+        </div>
+
+        <div id="timelineDescriptionBgM">
+            <div id="timelineDescription" class="dflex fdc aic jcsb">
+                <div>
+                    <p id="timelineTxtTitle" class="m0 p0 jersey fontTitleSize red">Lorem Ipsum</p>
+                    <p id="timelineTxtYear" class="m0 p0 IBM fontSubtitleSize2 beige">1928</p>
+
+                    <p id="timelineTxt" class="m0 IBM beige fontNormalSize">
+                        Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
+                        <br><br>
+                        Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
+                    </p>
+                </div>
+
+                <div id="timelineDescriptionPages" class="dflex fdr jcc">
+                    <p id="pagesLeft" class="m0 p0 IBM fontNormalSize2 beige"><</p>
+                    <p id="pages1" class="m0 p0 IBM fontNormalSize2 red">1</p>
+                    <p id="pages2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
+                    <p id="pages3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
+                    <p id="pages4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
+                    <p id="pages5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
+                    <p id="pagesRight" class="m0 p0 IBM fontNormalSize2 beige">></p>
                 </div>
             </div>
         </div>
